@@ -4,7 +4,7 @@ bib2xhtml-20171221
 csdp-6.x
 cvc4-1.5-4
 e-2.0-2
-isabelle_fonts-20190309
+isabelle_fonts-20190406
 jdk-11.0.2+9
 jedit_build-20190224
 jfreechart-1.5.0
